install(FILES include/dsp.h     DESTINATION /usr/share/ti/opencl ${OCL_FPERMS})
install(FILES include/dsp_c.h   DESTINATION /usr/share/ti/opencl ${OCL_FPERMS})
install(FILES include/clc.h     DESTINATION /usr/share/ti/opencl ${OCL_FPERMS})
install(FILES include/cpu.h     DESTINATION /usr/share/ti/opencl ${OCL_FPERMS})
install(FILES include/dsp_edmamgr.h
                                DESTINATION /usr/share/ti/opencl ${OCL_FPERMS})
