add_subdirectory(trivial)
add_subdirectory(vecadd)
add_subdirectory(vecadd_cpp)
add_subdirectory(program)
add_subdirectory(task)
add_subdirectory(dsplib)
add_subdirectory(dsplib_add_task)
add_subdirectory(dsplib_add_ndr)
add_subdirectory(dsplib_add_ndr_simple)
add_subdirectory(omp)
add_subdirectory(buffer)
add_subdirectory(cpucpy)
add_subdirectory(minimal_kernel)
add_subdirectory(subbuffers)
add_subdirectory(alldsps)
add_subdirectory(testsum)
add_subdirectory(matmpy)
add_subdirectory(sin)
add_subdirectory(offline)
add_subdirectory(IntelMedianFilter)
